Fix material table alignment

--- a/frontend/src/scss/settings.scss
+++ b/frontend/src/scss/settings.scss
@@ -129,5 +129,7 @@
   $list-item-title-line-height: 1.2,
   $list-item-icon-margin-start: 20px,
   $list-item-icon-margin-end: 16px,
-  $input-affix-margin-inside: 8px
+  $input-affix-margin-inside: 8px,
+  $table-font-size: 0.875rem,
+  $table-row-height: 48px
 );
